[package]
name = "streamvbyte-sys"
version = "0.1.0"
license = "Apache-2.0"
description = "Rust FFI bindings for streamvbyte"
authors = ["Matthias Petri <Matthias.Petri@gmail.com>"]
repository = "https://github.com/mpetri/streamvbyte-sys"
edition = "2018"
readme = "README.md"
keywords = ["vbyte", "streamvbyte", "compression", "integer"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
rand = "0.7"
rand_distr = "0.2"

[build-dependencies]
cmake = "0.1"
